@@ -1,0 +1,46 @@
+<sect1 id="config-theme">
+  <title>Gtk+ Theme Selector</title>
+  <para>
+    The <application>Gnome</application> environment is run by
+    <application>Gtk+</application>.  <application>Gtk+</application>
+    allows most elements in your desktop to be themed to the look you
+    want.  The <application>Gtk+ Theme Selector</application> lets you
+    select the theme to use.
+  </para>
+  <sect2 id="config-theme-setting">
+    <title>Setting Your Theme</title>
+    <para>
+      The top of the <application>Gtk+ Theme Selector</application>
+      has a list of installed themes.  Simply click on a theme and
+      your changes will be made.
+    </para>
+    <para>
+      You can interactively demo all the widgets available in your
+      selected theme in the lower half of the window.
+    </para>
+  </sect2>
+  <sect2 id="config-theme-add">
+    <title>Adding a Theme</title>
+    <para>
+      To add a theme to use:
+      <ordredlist numeration="arabic">
+	<listitem>
+	  <para>
+	    Click the <guibutton>Install new theme</guibutton> button.
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    Navigate to the directory your theme is installed in.
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    Open the gtkrc file which contains the specifications of
+	    your theme.
+	  </para>
+	</listitem>
+      </orderedlist>	
+    </para>
+  </sect2>
+</sect1>
