@@ -13,6 +13,7 @@
 <!ENTITY CONFIG-CD SYSTEM "config-cds.xml">
 <!ENTITY CONFIG-BACKGROUND SYSTEM "config-background.xml">
 <!ENTITY CONFIG-KEYBINDINGS SYSTEM "config-keybindings.xml">
+<!ENTITY CONFIG-THEME SYSTEM "config-themes.xml">
 ]>
 
 <article id="index" lang="en">
@@ -244,7 +245,7 @@
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term>Gtk+ Theme Selector</term>
+	  <term><xref linkend="config-theme" /></term>
 	  <listitem>
 	    <para>
 	      Configures the look of your buttons, menus, text, and
@@ -378,4 +379,5 @@
 &CONFIG-CD;
 &CONFIG-BACKGROUND;
 &CONFIG-KEYBINDINGS;
+&CONFIG-THEME;
 </article>
