@@ -1,3 +1,9 @@
+2002-03-31  Kevin Breit  <mrproper@ximian.com>
+
+	* C/control-center.xml: Enabled theme selector in documentation.
+
+	* C/config-themes.xml: Added the theme selector documentation.
+
 2002-03-23  Kevin Breit  <mrproper@ximian.com>
 
 	* C/config-keybindings.xml: Added file to CVS.
